--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="button_height_default">80dp</dimen>
     <dimen name="text_but_size">35sp</dimen>
     <dimen name="textSize">42sp</dimen>
+    <dimen name="margin">8dp</dimen>
 </resources>
