--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,12 +15,23 @@
     </style>
 
     <style name="MyCoolStyle">
-        <item name="android:textSize">@dimen/textSize</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/black</item>
         <item name="android:fontFamily">cursive</item>
         <item name="android:textStyle">italic</item>
-
+        <item name="android:text">@string/text_but_three</item>
+        <item name="android:textSize">@dimen/text_but_size</item>
     </style>
+
+    <style name="AppThemeLight" parent="Theme.MaterialComponents.Light">
+        <item name="colorPrimary">#e91e63</item>
+        <item name="colorPrimaryDark">#b0003a</item>
+        <item name="colorAccent">#ff6090</item>
+    </style>
+
+    <style name="AppThemeDark" parent="Theme.MaterialComponents">
+        <item name="android:textColor">@color/black</item>
+    </style>
+
 
 
 
